samples/_failures_safe/1761502864_40bc94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5223ec00.c: In function ‘main’:
./samples/SAFE/__tmp_5223ec00.c:145:22: error: ‘decompressed_b’ undeclared (first use in this function); did you mean ‘decompressed_buf’?
  145 |         buffer_free(&decompressed_b
      |                      ^~~~~~~~~~~~~~
      |                      decompressed_buf
./samples/SAFE/__tmp_5223ec00.c:145:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5223ec00.c:145:36: error: expected ‘)’ at end of input
  145 |         buffer_free(&decompressed_b
      |                    ~               ^
      |                                    )
./samples/SAFE/__tmp_5223ec00.c:145:9: error: expected declaration or statement at end of input
  145 |         buffer_free(&decompressed_b
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_5223ec00.c:145:9: error: expected declaration or statement at end of input
